--- a/styles/lists.less
+++ b/styles/lists.less
@@ -6,6 +6,7 @@
   li:not(.list-nested-item),
   li.list-nested-item > .list-item {
     .text(normal);
+    color: @panel-text-color;
   }
 
   .generate-list-item-text-color(@class) {
@@ -29,7 +30,7 @@
 
     li:not(.list-nested-item).selected.status-@{status},
     li.list-nested-item.selected.status-@{status} > .list-item {
-      color: darken(@color, 7%);
+      color: @text-color-selected;
     }
   }
   .generate-list-item-status-color(@text-color-subtle, ignored);
