--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -5,7 +5,7 @@
 	background: @tree-view-background-color;
 
 	.selected:before {
-		background: #d0d0d0;
+		background: #EB4D5C;
 	}
 }
 
@@ -17,12 +17,9 @@
 
 .focusable-panel {
 	opacity: 1;
-	background-image: -webkit-gradient(linear, left top, left bottom, from(#e8ecf1), to(#ebebeb));
-	background-image: -webkit-linear-gradient(top, #e8ecf1, #ebebeb);
 
 	&:focus {
-		background-image: -webkit-gradient(linear, left top, left bottom, from(#e8ecf1),to(#d1d8e0));
-		background-image: -webkit-linear-gradient(top, #e8ecf1, #d1d8e0);
+	//background-color: @tree-view-background-color; //might change in next release
 
 		.selected:before {
 			background: @background-color-selected;
