--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -7,7 +7,7 @@
 
 @text-color-info: #5293d8;
 @text-color-success: #45A815;
-@text-color-warning: #CD8E00;
+@text-color-warning: #38978D;
 @text-color-error: #c00;
 
 @text-color-ignored: @text-color-subtle;
@@ -16,12 +16,14 @@
 @text-color-modified: @text-color-warning;
 @text-color-removed: @text-color-error;
 
+@panel-text-color: #fff;
+
 @background-color-info: #0098ff;
 @background-color-success: #17ca65;
 @background-color-warning: #ff4800;
 @background-color-error: #c00;
 @background-color-highlight: rgba(0, 0, 0, .1);
-@background-color-selected: #6aa5e9;
+@background-color-selected: #38978D;
 
 @app-background-color: #ccc;
 
@@ -57,7 +59,7 @@
 @tab-background-color-active: #f0f0f0;
 @tab-border-color: lighten(@base-border-color, 10%);
 
-@tree-view-background-color: #eee;
+@tree-view-background-color: #4D394B;
 @tree-view-border-color: @base-border-color;
 
 @ui-site-color-1: @background-color-success; // green
