move collapsable-children icon to the right

--- a/styles/lists.less
+++ b/styles/lists.less
@@ -45,6 +45,11 @@
   }
 }
 
+.list-tree.has-collapsable-children .list-nested-item > .list-item::before  {
+    top: 6px;
+    float: right;
+}
+
 .select-list ol.list-group,
 &.select-list ol.list-group {
   li.two-lines {
