--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -4,6 +4,7 @@
 @text-color-subtle: #999;
 @text-color-highlight: #000;
 @text-color-selected: #fff;
+@text-color-unmodified: #ab9ba9;
 
 @text-color-info: #5293d8;
 @text-color-success: #45A815;
@@ -71,9 +72,10 @@
 
 // Sizes
 
-@font-size: 11px;
+@font-size: 13px;
 @input-font-size: 14px;
 @disclosure-arrow-size: 12px;
+@sidebar-icon-size: 13px;
 
 @component-padding: 10px;
 @component-icon-padding: 5px;
