--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -6,6 +6,9 @@
 
 	.selected:before {
 		background: #EB4D5C;
+		border-bottom-right-radius: 5px;
+		border-top-right-radius: 5px;
+		margin-right: 15px;
 	}
 }
 
