update to tabs to match slack

--- a/styles/lists.less
+++ b/styles/lists.less
@@ -137,3 +137,7 @@ li.ui-draggable-dragging, li.ui-sortable-helper {
   background: @background-color-highlight;
   box-shadow: 0 0 1px @base-border-color;
 }
+.list-inline > li {
+  padding-left: 0px;
+  padding-right: 0px;
+}
