--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -9,8 +9,6 @@
 
 .tab-bar {
   height: @tab-height + @tab-top-padding + @tab-bottom-border-height;
-  background-image: -webkit-linear-gradient(top, @tab-bar-background-color, lighten(@tab-bar-background-color, 9%));
-  box-shadow: inset 0 -8px 8px -4px rgba(0,0,0, .15);
   padding: 0 10px 0 25px;
   overflow-x: auto;
   overflow-y: hidden;
@@ -26,9 +24,6 @@
     height: @tab-bottom-border-height;
     left: 0;
     right: 0;
-    background-color: @tab-background-color-active;
-    border-bottom: 1px solid @tab-bar-border-color;
-    border-top: 1px solid @tab-border-color;
     pointer-events: none;
   }
 
@@ -38,43 +33,10 @@
     max-width: @tab-max-width;
     height: @tab-height;
     line-height: @tab-height;
-    color: @text-color;
-    padding: 0;
-    margin: 0 20px 0 5px;
-
-    box-shadow: inset -1px -1px 1px rgba(0,0,0, .05);
+    color: #3aa3e3;
     transition: color .1s ease-in;
-
-    &, &:before, &:after {
-      background-image: -webkit-linear-gradient(top, @tab-background-color, darken(@tab-background-color, 6%));
-      border-top: @tab-border;
-    }
-
-    &:before, &:after {
-      content: '';
-      position: absolute;
-      top: -1px;
-      width: 25px;
-      height: @tab-height;
-    }
-
-    // left angled edge
-    &:before {
-      left: -14px;
-      border-top-left-radius: @tab-radius;
-      border-left: @tab-border;
-      box-shadow: inset 1px -1px 1px rgba(0,0,0, .05);
-      -webkit-transform: skewX(-@tab-skew);
-    }
-
-    // right angled edge
-    &:after {
-      right: -14px;
-      border-top-right-radius: @tab-radius;
-      border-right: @tab-border;
-      box-shadow: inset -1px -1px 1px rgba(0,0,0, .05);
-      -webkit-transform: skewX(@tab-skew);
-    }
+    padding-left: 0px;
+    padding-right: 0px;
 
     .close-icon {
       right: 0;
@@ -82,6 +44,7 @@
       text-align: right;
       line-height: @tab-height;
       color: @text-color;
+      padding-right: 10px;
 
       &:hover {
         color: inherit;
@@ -102,23 +65,31 @@
     .title {
       position: relative;
       z-index: 1;
-      padding-right: 10px
+      border-bottom: 1px solid #e8e8e8;
+      padding-left: 20px;
+      font-weight: bold;
     }
   }
 
   .tab.active {
+    border: 1px solid #e8e8e8;
+    background: #fff;
+    border-bottom-color: #fff;
     z-index: 1;
     color: @text-color-highlight;
+    padding-left: 10px;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
 
     .close-icon {
       line-height: @tab-height - 1px;
       color: @text-color;
     }
-
-    &, &:before, &:after {
-      background: @tab-background-color-active;
-      height: @tab-height + 1px;
-      box-shadow: none;
+    .title {
+      position: relative;
+      z-index: 1;
+      padding-right: 10px;
+      border-bottom: 1px solid #ffffff;
     }
   }
 
