--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -32,7 +32,7 @@
     top: @tab-top-padding;
     max-width: @tab-max-width;
     height: @tab-height;
-    line-height: @tab-height;
+    line-height: @tab-height - 1;
     color: #3aa3e3;
     transition: color .1s ease-in;
     padding-left: 0px;
@@ -77,7 +77,6 @@
     border-bottom-color: #fff;
     z-index: 1;
     color: @text-color-highlight;
-    padding-left: 10px;
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
 
@@ -113,4 +112,7 @@
       top: @tab-height + @tab-top-padding + @tab-bottom-border-height - 2px;
     }
   }
+}
+.icon::before  {
+  font-size: 11px;
 }
