1px off on the tabs

--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -32,7 +32,7 @@
     top: @tab-top-padding;
     max-width: @tab-max-width;
     height: @tab-height;
-    line-height: @tab-height - 1;
+    line-height: @tab-height - 1px;
     color: #3aa3e3;
     transition: color .1s ease-in;
     padding-left: 0px;
