icon size and tabs fixes

--- a/styles/panels.less
+++ b/styles/panels.less
@@ -54,3 +54,16 @@ atom-panel, .tool-panel {
     .btn-background(@bg, @hover, @selected, @button-border-color, @text, @text);
   }
 }
+.tool-panel {
+  .icon {
+    &::before {
+      font-size: 16px;
+    }
+  }
+}
+//to be moved
+.icon {
+  &::before {
+    font-size: 14px;
+  }
+}
