ignore file color

--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -1,7 +1,7 @@
 // Colors
 
 @text-color: #444;
-@text-color-subtle: #999;
+@text-color-subtle: #6E6E6E;
 @text-color-highlight: #000;
 @text-color-selected: #fff;
 @text-color-unmodified: #ab9ba9;
