--- a/styles/lists.less
+++ b/styles/lists.less
@@ -127,6 +127,11 @@
   }
 }
 
+// checkbox in the settings view
+.settings-view input[type="checkbox"]:checked {
+  background-color: @background-color-slack-red;
+}
+
 li.ui-draggable-dragging, li.ui-sortable-helper {
   line-height: @component-line-height;
   height: @component-line-height;
