--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -7,7 +7,7 @@
 @text-color-unmodified: #ab9ba9;
 
 @text-color-info: #5293d8;
-@text-color-success: #45A815;
+@text-color-success: #E0AA34;
 @text-color-warning: #38978D;
 @text-color-error: #c00;
 
@@ -16,15 +16,19 @@
 @text-color-renamed: @text-color-info;
 @text-color-modified: @text-color-warning;
 @text-color-removed: @text-color-error;
+@text-white: #fff;
 
 @panel-text-color: #fff;
 
-@background-color-info: #0098ff;
+@background-color-info: #38978D;
 @background-color-success: #17ca65;
 @background-color-warning: #ff4800;
 @background-color-error: #c00;
 @background-color-highlight: rgba(0, 0, 0, .1);
+@background-color-other: #3D9EE3;
 @background-color-selected: #38978D;
+@background-color-slack-red: #EB4D5C;
+@background-key-bindings: #F2F2F5;
 
 @app-background-color: #ccc;
 
@@ -41,7 +45,7 @@
 @tool-panel-border-color: @base-border-color;
 
 @inset-panel-background-color: #fff;
-@inset-panel-border-color: fadeout(@base-border-color, 10%);
+@inset-panel-border-color: fadeout(@base-border-color, 80%);
 
 @panel-heading-background-color: #c3c3c3;
 @panel-heading-border-color: transparent;
@@ -53,6 +57,7 @@
 @button-background-color-hover: lighten(@button-background-color, 5%);
 @button-background-color-selected: #888;
 @button-border-color: rgba(0, 0, 0, 0.15);
+@button-group-color: #E0AA34;
 
 @tab-bar-background-color: #d8d8d8;
 @tab-bar-border-color: #ddd;
