--- a/styles/utilities.less
+++ b/styles/utilities.less
@@ -2,8 +2,7 @@
 @import "ui-variables";
 
 .key-binding {
-  background: #fff;
-  border: 1px solid lighten(@base-border-color, 20%);
+  background: @background-key-bindings;
   text-shadow: none;
   display: inline-block;
   line-height: 100%;
