--- a/styles/buttons.less
+++ b/styles/buttons.less
@@ -5,13 +5,11 @@
   @border-shadow: inset 0 0 0 1px @border-color;
   @active-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
   color: @text-color;
-  background-color: transparent;
-  background-image: -webkit-linear-gradient(@color, darken(@color, 8%));
-  box-shadow: @border-shadow;
+  background-color: @color;
 
   &:hover {
     color: @text-color-hover;
-    background-image: -webkit-linear-gradient(@hover-color, darken(@hover-color, 8%));
+    background-color: darken(@hover-color, 15%);
   }
   &:active,
   &.selected:hover:active {
@@ -31,8 +29,8 @@
 }
 
 .btn-variant (@color) {
-  @bg: darken(@color, 10%);
-  @hover: @color;
+  @bg: @color;
+  @hover: darken(@color, 10%);
   @selected: @color;
   @border: fadeout(darken(@color, 20%), 50%);
   .btn-background(@bg, @hover, @selected, @border, @text-color-selected, @text-color-selected);
@@ -58,6 +56,32 @@
   .btn-variant(@background-color-error);
 }
 
-.btn-group > .btn {
+.btn-group > .btn.btn.selected {
+  background-color: @button-group-color;
+  box-shadow: none;
   border: none;
+  text-shadow: none;
+  background-image: none;
+  color: @text-white;
+}
+
+.btn.btn-default {
+  border: 1px solid lightgrey !important;
+}
+
+.btn.uninstall-button {
+  background-color: @background-color-slack-red;
+  color: @text-white;
+
+  &:hover {
+    background-color: darken(@background-color-slack-red, 10%);
+    color: @text-white;
+  }
+}
+.badge {
+  color: @text-white;
+  background: @text-color-info;
+}
+.highlight-info {
+  color: @text-white;
 }
