--- a/styles/text.less
+++ b/styles/text.less
@@ -5,7 +5,7 @@ h1,
 h2,
 h3 {
   line-height: 1em;
-  margin-bottom: 15px
+  margin-bottom: 15px;
 }
 h1 { font-size: 2em; }
 h2 { font-size: 1.5em; }
