--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -5,7 +5,7 @@
 	background: @tree-view-background-color;
 
 	.selected:before {
-		background: #EB4D5C;
+		background: @background-color-slack-red;
 		border-bottom-right-radius: 5px;
 		border-top-right-radius: 5px;
 		margin-right: 15px;
