border color fix on modified file

--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -62,6 +62,7 @@
       top: @tab-height/2 - @modified-icon-width/2 + 1px;
       width: @modified-icon-width;
       height: @modified-icon-width;
+      border: none;
     }
 
     &.modified:hover .close-icon:hover {
