update major components to be consistent in styleguide. Many consistency fixes

--- a/styles/lists.less
+++ b/styles/lists.less
@@ -59,7 +59,7 @@
   li.two-lines {
     .secondary-line { color: @text-color-subtle; }
     &.selected .secondary-line {
-      color: lighten(@text-color-subtle, 10%);
+      color: darken(@text-color-subtle, 40%);
       text-shadow: none;
     }
   }
