--- a/styles/overlays.less
+++ b/styles/overlays.less
@@ -26,7 +26,7 @@ atom-panel.modal, .overlay {
 
       &.two-lines { padding: @component-padding/2 @component-padding; }
       &.selected {
-        color: @text-color;
+        color: @text-color-selected;
         background-color: @background-color-other;
 
         span {
