--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -1,14 +1,17 @@
 @import "ui-variables";
 
-.tree-view {
-	font-size: @font-size;
+.tree-view-scroller{
 	background: @tree-view-background-color;
+	.tree-view {
+		font-size: @font-size;
+		background: @tree-view-background-color;
 
-	.selected:before {
-		background: @background-color-slack-red;
-		border-bottom-right-radius: 5px;
-		border-top-right-radius: 5px;
-		margin-right: 15px;
+		.selected:before {
+			background: @background-color-slack-red;
+			border-bottom-right-radius: 5px;
+			border-top-right-radius: 5px;
+			margin-right: 15px;
+		}
 	}
 }
 
