List item indentation
List items on the same level should have the same level of indentation.

--- a/styles/lists.less
+++ b/styles/lists.less
@@ -45,6 +45,10 @@
   }
 }
 
+.list-tree.has-collapsable-children li.list-item {
+  margin-left: 0;
+}
+
 .list-tree.has-collapsable-children .list-nested-item > .list-item::before,
 .list-tree.has-collapsable-children .list-nested-item.selected > .list-item::before,
 .list-tree.has-collapsable-children .list-nested-item.collapsed > .list-item::before {
