--- a/styles/panels.less
+++ b/styles/panels.less
@@ -90,3 +90,6 @@ atom-panel.bottom, .tool-panel.bottom, atom-panel.panel-bottom, .tool-panel.pane
     font-size: 14px;
   }
 }
+.preview-pane .panel-heading {
+  align-self: center;
+}
