--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -26,9 +26,9 @@
 @text-color-renamed: @text-color-info;
 @text-color-modified: @text-color-warning;
 @text-color-removed: @text-color-error;
-@text-white: #fff;
+@text-white: @text-color-selected;
 
-@panel-text-color: #fff;
+@panel-text-color: @text-color-selected;
 
 @background-color-info: @slack-green;
 @background-color-success: @slack-blue;
@@ -92,6 +92,7 @@
 @disclosure-arrow-size: 12px;
 @sidebar-icon-size: 13px;
 
+@component-margin: 10px;
 @component-padding: 10px;
 @component-icon-padding: 5px;
 @component-icon-size: 16px;
