selected was jumpy just targeted element directly

--- a/styles/lists.less
+++ b/styles/lists.less
@@ -165,3 +165,7 @@ li.ui-draggable-dragging, li.ui-sortable-helper {
     }
   }
 }
+.list-group .selected::before, .list-tree .selected::before {
+  left: 10px;
+  right: 10px;
+}
