--- a/styles/lists.less
+++ b/styles/lists.less
@@ -169,3 +169,7 @@ li.ui-draggable-dragging, li.ui-sortable-helper {
   left: 10px;
   right: 10px;
 }
+.tree-view-scroller .tree-view .selected:before {
+  left: 0px;
+  right: 0px;
+}
